--- a/project.config.json
+++ b/project.config.json
@@ -52,6 +52,21 @@
 					"id": -1,
 					"name": "分类页面",
 					"pathName": "pages/category/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 1,
+					"name": "商品列表",
+					"pathName": "pages/goods_list/index",
+					"query": "cid=5",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/goods_detail/index",
+					"pathName": "pages/goods_detail/index",
+					"query": "goods_id=5",
 					"scene": null
 				}
 			]
