--- a/project.config.json
+++ b/project.config.json
@@ -68,6 +68,12 @@
 					"pathName": "pages/goods_detail/index",
 					"query": "goods_id=5",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "购物车",
+					"pathName": "pages/cart/index",
+					"scene": null
 				}
 			]
 		}
